added link to nav that will list blog titles of user

--- a/BlogApp/BlogApp.csproj
+++ b/BlogApp/BlogApp.csproj
@@ -6,6 +6,11 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Data\Migrations\20210301004608_BlogAppUserTest.cs" />
+    <Compile Remove="Data\Migrations\20210301004608_BlogAppUserTest.Designer.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
